--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "nodemon": "^3.1.9",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
-    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
@@ -37,6 +36,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
