--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_AUTH_API_URL=http://localhost:5000/api/v1/auth
+VITE_AUTH_SERVER_URL=http://localhost:5000/api/v1
+VITE_RESOURCE_SERVER_URL=http://localhost:4500/api/v1
