--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux-user-flow",
+  "name": "rtk-refresh-token-auth",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -7,23 +7,30 @@
     "@react-router/node": "^7.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@vitejs/plugin-react-swc": "^3.7.2",
+    "async-mutex": "^0.5.0",
+    "cross-env": "^7.0.3",
     "isbot": "^5",
     "nodemon": "^3.1.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-hot-toast": "^2.4.1",
+    "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
+    "typescript": "^5.7.2",
     "vite": "^6.0.6",
     "vite-plugin-svgr": "^4.3.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "zod": "^3.24.1"
   },
   "scripts": {
+    "build": "cross-env NODE_ENV=production react-router build",
     "dev": "react-router dev",
-    "build": "tsc && vite build",
-    "serve": "vite preview"
+    "start": "react-router-serve ./build/server/index.js",
+    "preview": "cross-env NODE_ENV=production react-router-serve ./build/server/index.js",
+    "typecheck": "react-router typegen && tsc"
   },
   "browserslist": {
     "production": [
