--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,15 @@
 version: "3.8" # Specify the version of Docker Compose
 
+# Docker is for production btw.
+
 services:
   rtk-refresh-token-auth:
     build:
       context: .
-      dockerfile: dev.Dockerfile
+      dockerfile: Dockerfile
     ports:
-      - "5173:5173"
+      - "5173:3000"
     env_file:
       - ./.env
     restart: unless-stopped
-    command: ["/bin/sh", "-c", "pnpm run dev"]
-
-    # develop:j #   watch:
-    #     - action: sync
-    #       path: ./src
-    #       target: /app/src
-    #       ignore:
-    #         - node_modules/
-    #     - action: rebuild
-    #       path: ./package.json
-    # volumes:
-    #   - ./src:/app/src # Mount the source files for live development
-    #   - ./public:/app/public # Ensure public assets are available
-    #   - ./package.json:/app/package.json
-    #   - ./tsconfig.json:/app/tsconfig.json
-    #   - ./tsconfig.build.json:/app/tsconfig.build.json
-    #   - ./tsconfig.app.json:/app/tsconfig.app.json
+    command: ["/bin/sh", "-c", "pnpm run start"]
