--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@react-router/node": "^7.1.1",
+    "@react-router/serve": "7.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "async-mutex": "^0.5.0",
